src/c-wgpu.zig

pub const struct_WGPUQuerySetDescriptorExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    pipelineStatistics: [*c]const WGPUPipelineStatisticName = null,
    pipelineStatisticCount: usize = 0,
};
pub const WGPUQuerySetDescriptorExtras = struct_WGPUQuerySetDescriptorExtras;
pub const struct_WGPUSurfaceConfigurationExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    desiredMaximumFrameLatency: u32 = 0,
};
pub const WGPUSurfaceConfigurationExtras = struct_WGPUSurfaceConfigurationExtras;
pub const struct_WGPUSurfaceSourceSwapChainPanel = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    panelNative: ?*anyopaque = null,
};
pub const WGPUSurfaceSourceSwapChainPanel = struct_WGPUSurfaceSourceSwapChainPanel;
pub const WGPUPolygonMode_Fill: c_int = 0;
pub const WGPUPolygonMode_Line: c_int = 1;
pub const WGPUPolygonMode_Point: c_int = 2;
pub const enum_WGPUPolygonMode = c_uint;
pub const WGPUPolygonMode = enum_WGPUPolygonMode;
pub const struct_WGPUPrimitiveStateExtras = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    polygonMode: WGPUPolygonMode = @import("std").mem.zeroes(WGPUPolygonMode),
    conservative: WGPUBool = 0,
};
pub const WGPUPrimitiveStateExtras = struct_WGPUPrimitiveStateExtras;
pub const WGPULogCallback = ?*const fn (level: WGPULogLevel, message: WGPUStringView, userdata: ?*anyopaque) callconv(.c) void;
pub const WGPUNativeTextureFormat_R16Unorm: c_int = 196609;
pub const WGPUNativeTextureFormat_R16Snorm: c_int = 196610;
pub const WGPUNativeTextureFormat_Rg16Unorm: c_int = 196611;
pub const WGPUNativeTextureFormat_Rg16Snorm: c_int = 196612;
pub const WGPUNativeTextureFormat_Rgba16Unorm: c_int = 196613;
pub const WGPUNativeTextureFormat_Rgba16Snorm: c_int = 196614;
pub const WGPUNativeTextureFormat_NV12: c_int = 196615;
pub const WGPUNativeTextureFormat_P010: c_int = 196616;
pub const enum_WGPUNativeTextureFormat = c_uint;
pub const WGPUNativeTextureFormat = enum_WGPUNativeTextureFormat;
pub const struct_WGPUImageSubresourceRange = extern struct {
    aspect: WGPUTextureAspect = @import("std").mem.zeroes(WGPUTextureAspect),
    baseMipLevel: u32 = 0,
    mipLevelCount: u32 = 0,
    baseArrayLayer: u32 = 0,
    arrayLayerCount: u32 = 0,
};
pub const WGPUImageSubresourceRange = struct_WGPUImageSubresourceRange;
pub extern fn wgpuGenerateReport(instance: WGPUInstance, report: [*c]WGPUGlobalReport) void;
pub extern fn wgpuInstanceEnumerateAdapters(instance: WGPUInstance, options: [*c]const WGPUInstanceEnumerateAdapterOptions, adapters: [*c]WGPUAdapter) usize;
pub extern fn wgpuQueueSubmitForIndex(queue: WGPUQueue, commandCount: usize, commands: [*c]const WGPUCommandBuffer) WGPUSubmissionIndex;
pub extern fn wgpuQueueGetTimestampPeriod(queue: WGPUQueue) f32;
pub extern fn wgpuDevicePoll(device: WGPUDevice, wait: WGPUBool, submissionIndex: [*c]const WGPUSubmissionIndex) WGPUBool;
pub extern fn wgpuDeviceCreateShaderModuleSpirV(device: WGPUDevice, descriptor: [*c]const WGPUShaderModuleDescriptorSpirV) WGPUShaderModule;
pub extern fn wgpuSetLogCallback(callback: WGPULogCallback, userdata: ?*anyopaque) void;
pub extern fn wgpuSetLogLevel(level: WGPULogLevel) void;
pub extern fn wgpuGetVersion() u32;
pub extern fn wgpuDeviceGetNativeMetalDevice(device: WGPUDevice) ?*anyopaque;
pub extern fn wgpuQueueGetNativeMetalCommandQueue(queue: WGPUQueue) ?*anyopaque;
pub extern fn wgpuTextureGetNativeMetalTexture(texture: WGPUTexture) ?*anyopaque;
pub extern fn wgpuRenderPassEncoderSetImmediates(encoder: WGPURenderPassEncoder, offset: u32, sizeBytes: u32, data: ?*const anyopaque) void;
pub extern fn wgpuComputePassEncoderSetImmediates(encoder: WGPUComputePassEncoder, offset: u32, sizeBytes: u32, data: ?*const anyopaque) void;
pub extern fn wgpuRenderBundleEncoderSetImmediates(encoder: WGPURenderBundleEncoder, offset: u32, sizeBytes: u32, data: ?*const anyopaque) void;
pub extern fn wgpuRenderPassEncoderMultiDrawIndirect(encoder: WGPURenderPassEncoder, buffer: WGPUBuffer, offset: u64, count: u32) void;
pub extern fn wgpuRenderPassEncoderMultiDrawIndexedIndirect(encoder: WGPURenderPassEncoder, buffer: WGPUBuffer, offset: u64, count: u32) void;
pub extern fn wgpuRenderPassEncoderMultiDrawIndirectCount(encoder: WGPURenderPassEncoder, buffer: WGPUBuffer, offset: u64, count_buffer: WGPUBuffer, count_buffer_offset: u64, max_count: u32) void;
pub extern fn wgpuRenderPassEncoderMultiDrawIndexedIndirectCount(encoder: WGPURenderPassEncoder, buffer: WGPUBuffer, offset: u64, count_buffer: WGPUBuffer, count_buffer_offset: u64, max_count: u32) void;
pub extern fn wgpuComputePassEncoderBeginPipelineStatisticsQuery(computePassEncoder: WGPUComputePassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuComputePassEncoderEndPipelineStatisticsQuery(computePassEncoder: WGPUComputePassEncoder) void;
pub extern fn wgpuRenderPassEncoderBeginPipelineStatisticsQuery(renderPassEncoder: WGPURenderPassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuRenderPassEncoderEndPipelineStatisticsQuery(renderPassEncoder: WGPURenderPassEncoder) void;
pub extern fn wgpuComputePassEncoderWriteTimestamp(computePassEncoder: WGPUComputePassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuRenderPassEncoderWriteTimestamp(renderPassEncoder: WGPURenderPassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuDeviceStartGraphicsDebuggerCapture(device: WGPUDevice) WGPUBool;
pub extern fn wgpuDeviceStopGraphicsDebuggerCapture(device: WGPUDevice) void;
pub extern fn wgpuCommandEncoderClearTexture(commandEncoder: WGPUCommandEncoder, texture: WGPUTexture, range: [*c]const WGPUImageSubresourceRange) void;

pub const __VERSION__ = "Aro aro-zig";
pub const __Aro__ = "";
pub const __STDC__ = @as(c_int, 1);
pub const __STDC_HOSTED__ = @as(c_int, 1);
pub const __STDC_UTF_16__ = @as(c_int, 1);
pub const __STDC_UTF_32__ = @as(c_int, 1);
pub const __STDC_EMBED_NOT_FOUND__ = @as(c_int, 0);
pub const __STDC_EMBED_FOUND__ = @as(c_int, 1);
pub const __STDC_EMBED_EMPTY__ = @as(c_int, 2);
pub const __STDC_VERSION__ = @as(c_long, 201710);
pub const __GNUC__ = @as(c_int, 7);
pub const __GNUC_MINOR__ = @as(c_int, 1);
pub const __GNUC_PATCHLEVEL__ = @as(c_int, 0);
pub const __ARO_EMULATE_NO__ = @as(c_int, 0);
pub const __ARO_EMULATE_CLANG__ = @as(c_int, 1);
pub const __ARO_EMULATE_GCC__ = @as(c_int, 2);
pub const __ARO_EMULATE_MSVC__ = @as(c_int, 3);
pub const __ARO_EMULATE__ = __ARO_EMULATE_GCC__;
pub inline fn __building_module(x: anytype) @TypeOf(@as(c_int, 0)) {
    _ = &x;
    return @as(c_int, 0);
}
